--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ before_install:
   - npm install
 
 rvm:
-  - 2.0.0
-  - 2.1.7
-  - 2.2.8
-  - 2.3.5
+#  - 2.0.0
+#  - 2.1.7
+#  - 2.2.8
+#  - 2.3.5
   - 2.4.2
 
 sudo: false
@@ -23,12 +23,17 @@ gemfile:
   - Gemfile.rails41
   - Gemfile.rails42
   - Gemfile.rails50
+  - Gemfile.rails51
 
 matrix:
   exclude:
     - gemfile: Gemfile.rails50
       rvm: 2.0.0
     - gemfile: Gemfile.rails50
+      rvm: 2.1.7
+    - gemfile: Gemfile.rails51
+      rvm: 2.0.0
+    - gemfile: Gemfile.rails51
       rvm: 2.1.7
     - gemfile: Gemfile.rails40
       rvm: 2.4.2
